--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "slim/slim": "2.*",
-        "wixel/gump": "dev-master"
+        "wixel/gump": "dev-master",
+        "catfan/medoo": "dev-master"
     }
 }
